foodquiz/src/assets/css/questionary.css
.questionary{
    padding-top: 110px;
}

.arrows{
    font-size: 16px;
    font-weight: bold;
}

.questionBox{
    padding-top: 20px;
    max-height: 400px !important;
    overflow-x: hidden;
    overflow-y: scroll;
}

.options{
    color: rgb(219, 231, 40);
    background-color: rgb(53, 124, 12);
    font-weight: bold;
    height: 50px;
    font-size: 20px;
    border-radius: 30px;
    border: black solid 1px;
    margin: 30px;
}

.options:hover{
    background-color: rgb(219, 231, 40);
    color: rgb(53, 124, 12);
    cursor: pointer;
}

.question{
    font-size: 26px;
}

#question1{
    display: block;
}

#question2{
    display: none;
}

#finalResult{
    display: none;
    font-size: 33px;
    font-weight: bold;
    color: rgb(233, 49, 17);
}

#finalResult:hover{
    text-decoration: underline;
}

#imagen{
    width: 670px;
    height: 500px;
}

#again{
    display: none;
}

#done{
    display:none;
}

#temp{
    display: block;
}

.navbar-item:hover{
    color: black !important;
    background-color:white !important;
}

.addMoreAnswers{
    width: 100%;
    border: none;
    height: 40px;
    border-radius: 15px;
    background-color: rgb(53, 124, 12);
    color: rgb(219, 231, 40);
    font-weight: bold;
    text-align: center;
    vertical-align: center;
}

.addMoreAnswers:hover{
    color: rgb(53, 124, 12);
    background-color: rgb(219, 231, 40);
    cursor: pointer;
}

#parentAnswer{
    max-height: 290px !important;
    overflow-y: scroll;
    overflow-x : hidden;
}

/* CURRENT QUESTION */
.title1{
    font-size: 30px;
}

.answers1{
    font-size:22px;
    color: rgb(233, 35, 35);
    font-weight: bold;
}

.questions1{
    font-size:22px;
    color: rgb(83, 14, 243);
    font-weight: bold;
}

.index1{
    font-size: 24px;
}

